--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chan Lee</title>
+    <link rel="stylesheet" type="text/css" href="style.css"/>  
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anek+Tamil:wght@100&family=Grape+Nuts&family=Lato&display=swap" rel="stylesheet">
+</head>
+<body>
+    <div class = "first-page">
+        <h1 div = "name"> Chan Lee </h1>
+        <a href = "https://github.com/chanlee20" style="font-size:24px" class = "icons"> <i class="fa fa-github"></i></a>
+        <a href = "https://www.linkedin.com/in/chan-lee-b38135a5/" style="font-size:24px" class = "icons"> <i class="fa fa-linkedin"></i></a>
+        <a href = "https://www.facebook.com/chan.lee.1004837" style="font-size:24px" class = "icons"> <i class="fa fa-facebook"></i></a>
+        <a href = "https://www.instagram.com/chan.lee20/" style="font-size:24px" class = "icons"> <i class="fa fa-instagram"></i></a>
+    </div>
+</body>
+</html>
