--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
 </head>
 <body>
     <div class = "first-page">
-        <h1 div = "name"> Chan Lee </h1>
+        <h1 class = "name"> Chan Lee </h1>
+        <h3> I Shape My World Through Computer Science. </h3>
         <a href = "https://github.com/chanlee20" style="font-size:24px" class = "icons"> <i class="fa fa-github"></i></a>
         <a href = "https://www.linkedin.com/in/chan-lee-b38135a5/" style="font-size:24px" class = "icons"> <i class="fa fa-linkedin"></i></a>
         <a href = "https://www.facebook.com/chan.lee.1004837" style="font-size:24px" class = "icons"> <i class="fa fa-facebook"></i></a>
         <a href = "https://www.instagram.com/chan.lee20/" style="font-size:24px" class = "icons"> <i class="fa fa-instagram"></i></a>
+        <img class = "pp" src = "assets/profile.png">
     </div>
 </body>
 </html>
