--- a/index.html
+++ b/index.html
@@ -12,7 +12,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Anek+Tamil:wght@100&family=Grape+Nuts&family=Lato&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class = "first-page">
+
+    <div id = "navbar" class = "navbar">
+        <ul>
+            <li><a href = "#fp"> <i class="fa-solid fa-house"></i></a></li>
+            <i class="fa-solid fa-address-card"></i>
+            <i class="fa-solid fa-file-chart-column"></i>
+            <i class="fa-solid fa-memo"></i>
+        </ul>
+        
+    </div>
+
+   <!-- first page section  -->
+    <div id = "fp" class = "first-page">
         <h1 class = "name"> Chan Lee </h1>
         <h3 class = "name"> I Shape My World Through Computer Science. </h3>
         <a href = "https://github.com/chanlee20" style="font-size:24px" class = "icons"> <i class="fa fa-github"></i></a>
