--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div id = "navbar" class = "navbar">
         <ul>
-            <li><a href = "#fp"> <i class="fa-solid fa-house"></i></a></li>
+            <a href = "#fp" style="font-size:24px"> <i class="fa-solid fa-house"></i></a>
             <i class="fa-solid fa-address-card"></i>
             <i class="fa-solid fa-file-chart-column"></i>
             <i class="fa-solid fa-memo"></i>
