--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
     <div id = "navbar" class = "navbar">
         <ul>
-            <a href = "#fp" style="font-size:24px"> <i class="fa-solid fa-house"></i></a>
-            <i class="fa-solid fa-address-card"></i>
+            <a href = "#fp" style="font-size:24px" class = "navicons"> <i class="fa-solid fa-house"></i></a>
+            <!-- <i class="fa-solid fa-address-card"></i>
             <i class="fa-solid fa-file-chart-column"></i>
-            <i class="fa-solid fa-memo"></i>
+            <i class="fa-solid fa-memo"></i> -->
         </ul>
         
     </div>
