--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div id = "navbar" class = "navbar">
         <ul>
-            <a href = "#fp" style="font-size:24px" class = "navicons"> <i class="fa-solid fa-house"></i></a>
+            <!-- <a href = "#fp" style="font-size:24px" class = "navicons"> <i class="fa-solid fa-house"></i></a> -->
             <!-- <i class="fa-solid fa-address-card"></i>
             <i class="fa-solid fa-file-chart-column"></i>
             <i class="fa-solid fa-memo"></i> -->
@@ -31,7 +31,14 @@
         <a href = "https://www.linkedin.com/in/chan-lee-b38135a5/" style="font-size:24px" class = "icons"> <i class="fa fa-linkedin"></i></a>
         <a href = "https://www.facebook.com/chan.lee.1004837" style="font-size:24px" class = "icons"> <i class="fa fa-facebook"></i></a>
         <a href = "https://www.instagram.com/chan.lee20/" style="font-size:24px" class = "icons"> <i class="fa fa-instagram"></i></a>
+        <a href = "#fp" style="font-size:24px" class = "icons"> <i class="fa-solid fa-house"></i></a>
         <img class = "pp" src = "assets/profile.png">
+    </div>
+
+    <!-- about me  -->
+    <div id = "am" class = "about-me">
+        <h1 class = "header"> ABOUT </h1>
+        <h3> Hi! I am a rising junior studying at Washington University in St. Louis studying computer science. </h3>
     </div>
 </body>
 </html>
