--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- about me  -->
     <div id = "am" class = "about-me">
         <h1 class = "header"> ABOUT </h1>
-        <h3> Hi! I am a rising junior studying at Washington University in St. Louis studying computer science. </h3>
+        <h3 class = "intro"> Hi! I am a rising junior studying at Washington University in St. Louis studying computer science. </h3>
     </div>
 </body>
 </html>
