--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
     <div id = "am" class = "about-me">
         <h1 class = "header"> ABOUT </h1>
         <h3 class = "intro"> Hi! I am a rising junior studying at Washington University in St. Louis studying computer science. </h3>
+        <img class = "pp2" src = "assets/fkimg.jpeg"> 
+        <h1 class = "job"> Software Developer </h1>
+        <h3 class = "desc"> The life you want is beyond your safe zone. Let my code break your routine and welcome you to a new world full of adventure. </h3>
+        
     </div>
 </body>
 </html>
