--- a/index.html
+++ b/index.html
@@ -43,6 +43,18 @@
         <h1 class = "job"> Software Developer </h1>
         <h3 class = "desc"> The life you want is beyond your safe zone. Let my code break your routine and welcome you to a new world full of adventure. </h3>
         
+        <div class = "infos">
+            <ul class = "col1">
+                <li> Location (USA): St. Louis, MO </li>
+                <li> Location (KR): Seoul, South Korea </li>
+                <li> Major: Computer Science </li>
+            </ul>
+            <ul class = "col2">
+                <li> Phone Number (USA): +1 (314) 857 4662 </li>
+                <li> Phone Number (KR): +8210-6342-3142 </li>
+                <li> Email: chan.l1@wustl.edu </li>
+            </ul>
+        </div>
     </div>
 </body>
 </html>
