--- a/index.html
+++ b/index.html
@@ -56,5 +56,12 @@
             </ul>
         </div>
     </div>
+
+    <!-- Projects -->
+
+    <div id = "p" class = "projects">
+        <h1 class = "header"> PROJECTS </h1>
+        
+    </div>
 </body>
 </html>
