--- a/index.html
+++ b/index.html
@@ -62,7 +62,13 @@
     <div id = "p" class = "projects">
         <h1 class = "header"> PROJECTS </h1>
         <h4> ALL </h4>
-        
+        <div class = "p-gallery">
+            <div class = "img-section">
+                <img class = "img" src = "assets/p1.png">
+                <img class = "img" src = "assets/p2.png"> 
+                
+            </div>
+        </div>
 
 
     </div>
