--- a/index.html
+++ b/index.html
@@ -60,13 +60,16 @@
     <!-- Projects -->
 
     <div id = "p" class = "projects">
-        <h1 class = "header"> PROJECTS </h1>
-        <h4> ALL </h4>
+        <h1 class = "header2"> PROJECTS </h1>
+        <h4 class = "sub"> ALL </h4>
         <div class = "p-gallery">
             <div class = "img-section">
                 <img class = "img" src = "assets/p1.png">
                 <img class = "img" src = "assets/p2.png"> 
-                
+                <img class = "img" src = "assets/active_cal.jpg">
+                <img class = "img" src = "assets/chat.png"> 
+                <img class = "img" src = "assets/kysc.jpeg">
+                <img class = "img" src = "assets/unicef.jpeg"> 
             </div>
         </div>
 
