--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
         <h4 class = "sub"> ALL </h4>
         <div class = "p-gallery">
             <div class = "img-section">
-                <img class = "img" src = "assets/p1.png">
-                <img class = "img" src = "assets/p2.png"> 
-                <img class = "img" src = "assets/active_cal.jpg">
-                <img class = "img" src = "assets/chat.png"> 
-                <img class = "img" src = "assets/kysc.jpeg">
-                <img class = "img" src = "assets/unicef.jpeg"> 
+                <a href = "https://github.com/chanlee20/WeatherAPI-Predictor"><img class = "img" src = "assets/p1.png"> </a>
+                <a href = "https://github.com/chanlee20/todo-react"><img class = "img" src = "assets/p2.png"> </a> 
+                <a href = "https://github.com/chanlee20/CSE330CourseWork/tree/main/module5-group"><img class = "img" src = "assets/active_cal.jpg"></a>
+                <a href = "https://github.com/chanlee20/CSE330CourseWork/tree/main/module6"><img class = "img" src = "assets/chat.png"> </a>
+                <a href = "https://github.com/chanlee20/kysc"> <img class = "img" src = "assets/kysc.jpeg"> </a>
+                <a href = "https://www.instagram.com/uysc_sis/"> <img class = "img" src = "assets/unicef.jpeg">  </a>
             </div>
         </div>
 
