--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 <body>
 
     <div id = "navbar" class = "navbar">
-        <ul>
+        <a href = "https://github.com/chanlee20" style="font-size:24px" class = "icons"> <i class="fa-solid fa-house"></i></a>
             <!-- <a href = "#fp" style="font-size:24px" class = "navicons"> <i class="fa-solid fa-house"></i></a> -->
             <!-- <i class="fa-solid fa-address-card"></i>
             <i class="fa-solid fa-file-chart-column"></i>
             <i class="fa-solid fa-memo"></i> -->
-        </ul>
+      
         
     </div>
 
@@ -64,12 +64,12 @@
         <h4 class = "sub"> ALL </h4>
         <div class = "p-gallery">
             <div class = "img-section">
-                <a href = "https://github.com/chanlee20/WeatherAPI-Predictor"><img class = "img" src = "assets/p1.png"> </a>
-                <a href = "https://github.com/chanlee20/todo-react"><img class = "img" src = "assets/p2.png"> </a> 
-                <a href = "https://github.com/chanlee20/CSE330CourseWork/tree/main/module5-group"><img class = "img" src = "assets/active_cal.jpg"></a>
-                <a href = "https://github.com/chanlee20/CSE330CourseWork/tree/main/module6"><img class = "img" src = "assets/chat.png"> </a>
-                <a href = "https://github.com/chanlee20/kysc"> <img class = "img" src = "assets/kysc.jpeg"> </a>
-                <a href = "https://www.instagram.com/uysc_sis/"> <img class = "img" src = "assets/unicef.jpeg">  </a>
+                <a href = "https://github.com/chanlee20/WeatherAPI-Predictor"><img class = "img" src = "assets/p1.png" id = "i1"> </a>
+                <a href = "https://github.com/chanlee20/todo-react"><img class = "img" src = "assets/p2.png" id = "i2"> </a> 
+                <a href = "https://github.com/chanlee20/CSE330CourseWork/tree/main/module5-group"><img class = "img" src = "assets/active_cal.jpg" id = "i3"></a>
+                <a href = "https://github.com/chanlee20/CSE330CourseWork/tree/main/module6"><img class = "img" src = "assets/chat.png" id = "i4"> </a>
+                <a href = "https://github.com/chanlee20/kysc"> <img class = "img" src = "assets/kysc.jpeg" id = "i5"> </a>
+                <a href = "https://www.instagram.com/uysc_sis/"> <img class = "img" src = "assets/unicef.jpeg" id = "i6">  </a>
             </div>
         </div>
 
