--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
 
     <div id = "navbar" class = "navbar">
+        <h1> HELLOOOOOO </h1>
         <a href = "https://github.com/chanlee20" style="font-size:24px" class = "icons"> <i class="fa-solid fa-house"></i></a>
             <!-- <a href = "#fp" style="font-size:24px" class = "navicons"> <i class="fa-solid fa-house"></i></a> -->
             <!-- <i class="fa-solid fa-address-card"></i>
@@ -72,8 +73,12 @@
                 <a href = "https://www.instagram.com/uysc_sis/"> <img class = "img" src = "assets/unicef.jpeg" id = "i6">  </a>
             </div>
         </div>
-
-
     </div>
+
+    <!-- skills -->
+
+    <!-- Resume -->
+
+    
 </body>
 </html>
