--- a/index.html
+++ b/index.html
@@ -77,8 +77,49 @@
 
     <!-- skills -->
 
+    <div id = "s" class ="skills">
+        <h1 class = "header3"> SKILLS </h1>
+        <div class ="java">
+            <p class = "sublist"> JAVA </p>
+            <div class="w3-light-grey">
+                <div class="w3-grey" style="height:24px;width:95%"></div>
+            </div>
+        </div>
+        <div class = "html/css/js">
+            <p class = "sublist"> HTML / CSS / JS (React + Node) </p>
+            <div class="w3-light-grey">
+                <div class="w3-grey" style="height:24px;width:95%"></div>
+            </div>
+        </div>
+        <div class = "python">
+            <p class = "sublist"> Python </p>
+            <div class="w3-light-grey">
+                <div class="w3-grey" style="height:24px;width:95%"></div>
+            </div>
+        </div>
+        <div class = "MySql">
+            <p class = "sublist"> MySql </p>
+            <div class="w3-light-grey">
+                <div class="w3-grey" style="height:24px;width:95%"></div>
+            </div>
+        </div>
+        <div class = "PHP">
+            <p class = "sublist"> PHP </p>
+            <div class="w3-light-grey">
+                <div class="w3-grey" style="height:24px;width:95%"></div>
+            </div>
+        </div>
+        <div class = "C/C++">
+            <p class = "sublist"> C / C++ </p>
+            <div class="w3-light-grey">
+                <div class="w3-grey" style="height:24px;width:95%"></div>
+            </div>
+        </div>
+
+    </div>
+
     <!-- Resume -->
 
-    
+
 </body>
 </html>
