--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div id = "navbar" class = "navbar">
         <h1> HELLOOOOOO </h1>
-        <a href = "https://github.com/chanlee20" style="font-size:24px" class = "icons"> <i class="fa-solid fa-house"></i></a>
+        <a href = "https://github.com/chanlee20" style="font-size:24px" class = "navicons"> <i class="fa-solid fa-house"></i></a>
             <!-- <a href = "#fp" style="font-size:24px" class = "navicons"> <i class="fa-solid fa-house"></i></a> -->
             <!-- <i class="fa-solid fa-address-card"></i>
             <i class="fa-solid fa-file-chart-column"></i>
