--- a/index.html
+++ b/index.html
@@ -79,37 +79,35 @@
 
     <div id = "s" class ="skills">
         <h1 class = "header3"> SKILLS </h1>
-        <div class ="java">
+        <div id ="java">
             <p class = "sublist"> JAVA </p>
-            <div class="w3-light-grey">
-                <div class="w3-grey" style="height:24px;width:95%"></div>
-            </div>
+            <progress id="file" value="32" max="100"> 32% </progress>
         </div>
-        <div class = "html/css/js">
+        <div id = "html/css/js">
             <p class = "sublist"> HTML / CSS / JS (React + Node) </p>
             <div class="w3-light-grey">
                 <div class="w3-grey" style="height:24px;width:95%"></div>
             </div>
         </div>
-        <div class = "python">
+        <div id = "python">
             <p class = "sublist"> Python </p>
             <div class="w3-light-grey">
                 <div class="w3-grey" style="height:24px;width:95%"></div>
             </div>
         </div>
-        <div class = "MySql">
+        <div id = "MySql">
             <p class = "sublist"> MySql </p>
             <div class="w3-light-grey">
                 <div class="w3-grey" style="height:24px;width:95%"></div>
             </div>
         </div>
-        <div class = "PHP">
+        <div id = "PHP">
             <p class = "sublist"> PHP </p>
             <div class="w3-light-grey">
                 <div class="w3-grey" style="height:24px;width:95%"></div>
             </div>
         </div>
-        <div class = "C/C++">
+        <div id = "C/C++">
             <p class = "sublist"> C / C++ </p>
             <div class="w3-light-grey">
                 <div class="w3-grey" style="height:24px;width:95%"></div>
