--- a/index.html
+++ b/index.html
@@ -79,39 +79,29 @@
 
     <div id = "s" class ="skills">
         <h1 class = "header3"> SKILLS </h1>
-        <div id ="java">
+        <div class = "sk" id ="java">
             <p class = "sublist"> JAVA </p>
-            <progress id="file" value="32" max="100"> 32% </progress>
+            <progress value="90" max="100"> 90% </progress>
         </div>
-        <div id = "html/css/js">
+        <div class = "sk" id = "html/css/js">
             <p class = "sublist"> HTML / CSS / JS (React + Node) </p>
-            <div class="w3-light-grey">
-                <div class="w3-grey" style="height:24px;width:95%"></div>
-            </div>
+            <progress value="95" max="100"> 95% </progress>
         </div>
-        <div id = "python">
+        <div class = "sk" id = "python">
             <p class = "sublist"> Python </p>
-            <div class="w3-light-grey">
-                <div class="w3-grey" style="height:24px;width:95%"></div>
-            </div>
+            <progress value="80" max="100"> 80% </progress>
         </div>
-        <div id = "MySql">
+        <div class = "sk" id = "MySql">
             <p class = "sublist"> MySql </p>
-            <div class="w3-light-grey">
-                <div class="w3-grey" style="height:24px;width:95%"></div>
-            </div>
+            <progress value="95" max="100"> 95% </progress>
         </div>
-        <div id = "PHP">
+        <div class = "sk" id = "PHP">
             <p class = "sublist"> PHP </p>
-            <div class="w3-light-grey">
-                <div class="w3-grey" style="height:24px;width:95%"></div>
-            </div>
+            <progress  value="95" max="100"> 95% </progress>
         </div>
-        <div id = "C/C++">
+        <div class = "sk" id = "C/C++">
             <p class = "sublist"> C / C++ </p>
-            <div class="w3-light-grey">
-                <div class="w3-grey" style="height:24px;width:95%"></div>
-            </div>
+            <progress value="60" max="100"> 60% </progress>
         </div>
 
     </div>
