--- a/index.html
+++ b/index.html
@@ -81,26 +81,32 @@
         <h1 class = "header3"> SKILLS </h1>
         <div class = "sk" id ="java">
             <p class = "sublist"> JAVA </p>
+            <p class = "percentage"> 90% </p>
             <progress value="90" max="100"> 90% </progress>
         </div>
         <div class = "sk" id = "html/css/js">
             <p class = "sublist"> HTML / CSS / JS (React + Node) </p>
+            <p class = "percentage"> 95% </p>
             <progress value="95" max="100"> 95% </progress>
         </div>
         <div class = "sk" id = "python">
             <p class = "sublist"> Python </p>
+            <p class = "percentage"> 80% </p>
             <progress value="80" max="100"> 80% </progress>
         </div>
         <div class = "sk" id = "MySql">
             <p class = "sublist"> MySql </p>
+            <p class = "percentage"> 95% </p>
             <progress value="95" max="100"> 95% </progress>
         </div>
         <div class = "sk" id = "PHP">
-            <p class = "sublist"> PHP </p>
+            <p class = "sublist"> PHP </p>            
+            <p class = "percentage"> 95% </p>
             <progress  value="95" max="100"> 95% </progress>
         </div>
         <div class = "sk" id = "C/C++">
             <p class = "sublist"> C / C++ </p>
+            <p class = "percentage"> 60% </p>
             <progress value="60" max="100"> 60% </progress>
         </div>
 
