--- a/index.html
+++ b/index.html
@@ -64,24 +64,29 @@
         <h1 class = "header2"> PROJECTS </h1>
         <h4 class = "sub"> ALL </h4>
         <div class = "p-gallery">
-            <div class = "img-section">
-                <a href = "https://github.com/chanlee20/WeatherAPI-Predictor"><img class = "img" src = "assets/p1.png" id = "i1"> </a>
+            <div class = "first-section">
+                <div class = "img-section">
+                    <a href = "https://github.com/chanlee20/WeatherAPI-Predictor"><img class = "img" src = "assets/p1.png" id = "i1"> </a>
+                </div>
+                <div class = "img-section">
+                    <a href = "https://github.com/chanlee20/todo-react"><img class = "img" src = "assets/p2.png" id = "i2"> </a> 
+                </div>
+                <div class = "img-section">
+                    <a href = "https://github.com/chanlee20/CSE330CourseWork/tree/main/module5-group"><img class = "img" src = "assets/active_cal.jpg" id = "i3"></a>
+                </div>
             </div>
-            <div class = "img-section">
-                <a href = "https://github.com/chanlee20/todo-react"><img class = "img" src = "assets/p2.png" id = "i2"> </a> 
+            <div class = "sec-section">
+                <div class = "img-section">
+                    <a href = "https://github.com/chanlee20/CSE330CourseWork/tree/main/module6"><img class = "img" src = "assets/chat.png" id = "i4"> </a>
+                </div>
+                <div class = "img-section">
+                    <a href = "https://github.com/chanlee20/kysc"> <img class = "img" src = "assets/kysc.jpeg" id = "i5"> </a>
+                </div>
+                <div class = "img-section">
+                    <a href = "https://www.instagram.com/uysc_sis/"> <img class = "img" src = "assets/unicef.jpeg" id = "i6">  </a>
+                </div>
             </div>
-            <div class = "img-section">
-                <a href = "https://github.com/chanlee20/CSE330CourseWork/tree/main/module5-group"><img class = "img" src = "assets/active_cal.jpg" id = "i3"></a>
-            </div>
-            <div class = "img-section">
-                <a href = "https://github.com/chanlee20/CSE330CourseWork/tree/main/module6"><img class = "img" src = "assets/chat.png" id = "i4"> </a>
-            </div>
-            <div class = "img-section">
-                <a href = "https://github.com/chanlee20/kysc"> <img class = "img" src = "assets/kysc.jpeg" id = "i5"> </a>
-            </div>
-            <div class = "img-section">
-                <a href = "https://www.instagram.com/uysc_sis/"> <img class = "img" src = "assets/unicef.jpeg" id = "i6">  </a>
-            </div>
+            
         </div>
     </div>
 
