--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div id = "navbar" class = "navbar">
         <h1> HELLOOOOOO </h1>
-        <a href = "https://github.com/chanlee20" style="font-size:24px" class = "navicons"> <i class="fa-solid fa-house"></i></a>
+        <a href = "https://github.com/chanlee20" style="font-size:24px" class = "iconaas"> <i class="fa fa-github"></i></a>
             <!-- <a href = "#fp" style="font-size:24px" class = "navicons"> <i class="fa-solid fa-house"></i></a> -->
             <!-- <i class="fa-solid fa-address-card"></i>
             <i class="fa-solid fa-file-chart-column"></i>
@@ -28,6 +28,7 @@
     <div id = "fp" class = "first-page">
         <h1 class = "name"> Chan Lee </h1>
         <h3 class = "name"> I Shape My World Through Computer Science. </h3>
+        <a href = "https://github.com/chanlee20" style="font-size:24px" class = "navicons"> <i class="fa-solid fa-house"></i></a>
         <a href = "https://github.com/chanlee20" style="font-size:24px" class = "icons"> <i class="fa fa-github"></i></a>
         <a href = "https://www.linkedin.com/in/chan-lee-b38135a5/" style="font-size:24px" class = "icons"> <i class="fa fa-linkedin"></i></a>
         <a href = "https://www.facebook.com/chan.lee.1004837" style="font-size:24px" class = "icons"> <i class="fa fa-facebook"></i></a>
