--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chan Lee</title>
+    <script src="https://kit.fontawesome.com/71ab33daee.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="style.css"/>  
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,7 +16,8 @@
 
     <div id = "navbar" class = "navbar">
         <h1> HELLOOOOOO </h1>
-        <a href = "https://github.com/chanlee20" style="font-size:24px" class = "iconaas"> <i class="fa fa-github"></i></a>
+        <a href = "https://github.com/chanlee20" style="font-size:24px" class = "iconaas"> <i class="fa-solid fa-house"></i>/i></a>
+        
             <!-- <a href = "#fp" style="font-size:24px" class = "navicons"> <i class="fa-solid fa-house"></i></a> -->
             <!-- <i class="fa-solid fa-address-card"></i>
             <i class="fa-solid fa-file-chart-column"></i>
@@ -28,7 +30,6 @@
     <div id = "fp" class = "first-page">
         <h1 class = "name"> Chan Lee </h1>
         <h3 class = "name"> I Shape My World Through Computer Science. </h3>
-        <a href = "https://github.com/chanlee20" style="font-size:24px" class = "navicons"> <i class="fa-solid fa-house"></i></a>
         <a href = "https://github.com/chanlee20" style="font-size:24px" class = "icons"> <i class="fa fa-github"></i></a>
         <a href = "https://www.linkedin.com/in/chan-lee-b38135a5/" style="font-size:24px" class = "icons"> <i class="fa fa-linkedin"></i></a>
         <a href = "https://www.facebook.com/chan.lee.1004837" style="font-size:24px" class = "icons"> <i class="fa fa-facebook"></i></a>
@@ -40,7 +41,7 @@
     <!-- about me  -->
     <div id = "am" class = "about-me">
         <h1 class = "header"> ABOUT </h1>
-        <h3 class = "intro"> Hi! I am a rising junior studying at Washington University in St. Louis studying computer science. </h3>
+        <h3 class = "intro"> Hi! I am a rising junior at Washington University in St. Louis studying computer science. </h3>
         <img class = "pp2" src = "assets/fkimg.jpeg"> 
         <h1 class = "job"> Software Developer </h1>
         <h3 class = "desc"> The life you want is beyond your safe zone. Let my code break your routine and welcome you to a new world full of adventure. </h3>
