--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
 
     <div id = "navbar" class = "navbar">
         <h1> HELLOOOOOO </h1>
-        <a href = "https://github.com/chanlee20" style="font-size:24px" class = "iconaas"> <i class="fa-solid fa-house"></i>/i></a>
-        
+        <a href = "#fp" style="font-size:24px" class = "nicon"> <i class="fa-solid fa-house"></i></a>
+        <a href = "#am" style="font-size:24px" class = "nicon"> <i class="fa-regular fa-user"></i></a>
+        <a href = "#p" style="font-size:24px" class = "nicon"> <i class="fa-regular fa-diagram-project"></i></a>
+        <a href = "#s" style="font-size:24px" class = "nicon"> <i class="fa-solid fa-list-check"></i></a>
+
             <!-- <a href = "#fp" style="font-size:24px" class = "navicons"> <i class="fa-solid fa-house"></i></a> -->
             <!-- <i class="fa-solid fa-address-card"></i>
             <i class="fa-solid fa-file-chart-column"></i>
@@ -34,7 +37,6 @@
         <a href = "https://www.linkedin.com/in/chan-lee-b38135a5/" style="font-size:24px" class = "icons"> <i class="fa fa-linkedin"></i></a>
         <a href = "https://www.facebook.com/chan.lee.1004837" style="font-size:24px" class = "icons"> <i class="fa fa-facebook"></i></a>
         <a href = "https://www.instagram.com/chan.lee20/" style="font-size:24px" class = "icons"> <i class="fa fa-instagram"></i></a>
-        <a href = "#fp" style="font-size:24px" class = "icons"> <i class="fa-solid fa-house"></i></a>
         <img class = "pp" src = "assets/profile.png">
     </div>
 
