--- a/index.html
+++ b/index.html
@@ -17,10 +17,8 @@
     <div id = "navbar" class = "navbar">
         <a href = "#fp" style="font-size:24px" class = "nicon"> <i class="fa-solid fa-house"></i></a>
         <a href = "#am" style="font-size:24px" class = "nicon"> <i class="fa-regular fa-user"></i></a>
-        <a href = "#p" style="font-size:24px" class = "nicon"> <i class="fa-regular fa-diagram-project"></i></a>
-        <a href = "#s" style="font-size:24px" class = "nicon"> <i class="fa-solid fa-list-check"></i></a>
-      
-        
+        <a href = "#hp" style="font-size:24px" class = "nicon"> <i class="fa-solid fa-list-check"></i></a>
+        <a href = "#hs" style="font-size:24px" class = "nicon"> <i class="fa-solid fa-bars-progress"></i></a>
     </div>
 
    <!-- first page section  -->
@@ -59,7 +57,7 @@
     <!-- Projects -->
 
     <div id = "p" class = "projects">
-        <h1 class = "header2"> PROJECTS </h1>
+        <h1 id = "hp" class = "header2"> PROJECTS </h1>
         <h4 class = "sub"> ALL </h4>
         <div class = "p-gallery">
             <div class = "first-section">
@@ -91,7 +89,7 @@
     <!-- skills -->
 
     <div id = "s" class ="skills">
-        <h1 class = "header3"> SKILLS </h1>
+        <h1 id = "hs" class = "header3"> SKILLS </h1>
         <div class = "sk" id ="java">
             <p class = "sublist"> JAVA </p>
             <p class = "percentage"> 90% </p>
