--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 
     <div id = "s" class ="skills">
         <h1 id = "hs" class = "header3"> SKILLS </h1>
+        <h4 class = "instr"> Languages I am Comfortable With</h4>
         <div class = "sk" id ="java">
             <p class = "sublist"> JAVA </p>
             <p class = "percentage"> 90% </p>
@@ -124,7 +125,11 @@
     </div>
 
     <!-- Resume -->
+    <div id = "r" class = "resume">
+        <h1 id = "hr" class = "header3"> RESUME </h1>
+        <h4 class = "instr"> My official resume can be seen <a id = "here" href = "assets/Chan Lee Official Resume Intern (2).pdf"> here </a> </h4>
 
+    </div>
 
 </body>
 </html>
