--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <a href = "#am" style="font-size:24px" class = "nicon"> <i class="fa-regular fa-user"></i></a>
         <a href = "#hp" style="font-size:24px" class = "nicon"> <i class="fa-solid fa-list-check"></i></a>
         <a href = "#hs" style="font-size:24px" class = "nicon"> <i class="fa-solid fa-bars-progress"></i></a>
+        <a href = "#hr" style="font-size:24px" class = "nicon"> <i class="fa-regular fa-file-user"></i></a>
     </div>
 
    <!-- first page section  -->
