--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <h3 class = "intro"> Hi! I am a rising junior at Washington University in St. Louis studying computer science. </h3>
         <img class = "pp2" src = "assets/fkimg.jpeg"> 
         <h1 class = "job"> Software Developer </h1>
-        <h3 class = "desc"> The life you want is beyond your safe zone. Let my code break your routine and welcome you to a new world full of adventure. </h3>
+        <h3 class = "desc"> The purpose behind technology is to better our lives. Thus, I build my code based on what humans desire not what technology desires. </h3>
         
         
             <ul class = "col1">
