--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href = "#am" style="font-size:24px" class = "nicon"> <i class="fa-regular fa-user"></i></a>
         <a href = "#hp" style="font-size:24px" class = "nicon"> <i class="fa-solid fa-list-check"></i></a>
         <a href = "#hs" style="font-size:24px" class = "nicon"> <i class="fa-solid fa-bars-progress"></i></a>
-        <a href = "#hr" style="font-size:24px" class = "nicon"> <i class="fa-regular fa-file-user"></i></a>
+        <a href = "#hr" style="font-size:24px" class = "nicon"> <i class="fa-solid fa-folder-user"></i></a>
     </div>
 
    <!-- first page section  -->
@@ -131,6 +131,9 @@
         <h4 class = "instr"> My official resume can be seen <a id = "here" href = "assets/Chan Lee Official Resume Intern1.pdf"> here </a> </h4>
 
     </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js" integrity="sha512-VEBjfxWUOyzl0bAwh4gdLEaQyDYPvLrZql3pw1ifgb6fhEvZl9iDDehwHZ+dsMzA0Jfww8Xt7COSZuJ/slxc4Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src = "./app.js"></script>
 
 </body>
 </html>
