--- a/index.html
+++ b/index.html
@@ -14,6 +14,27 @@
 </head>
 <body>
 
+    <div class = "beginning">
+        <div class = "intro-text">
+            <h1 class = "hide">
+                <span class = "text">
+                    Creating Innovation
+                </span>
+            </h1>
+            <h1 class = "hide">
+                <span class = "text">
+                    For Everyday
+                </span>
+            </h1>
+            <h1 class = "hide">
+                <span class = "text">
+                    People.
+                </span>
+            </h1>
+        </div>
+    </div>
+    <div class = "slider"></div>
+
     <div id = "navbar" class = "navbar">
         <a href = "#fp" style="font-size:24px" class = "nicon"> <i class="fa-solid fa-house"></i></a>
         <a href = "#am" style="font-size:24px" class = "nicon"> <i class="fa-regular fa-user"></i></a>
