--- a/index.html
+++ b/index.html
@@ -16,19 +16,15 @@
 
     <div class = "beginning">
         <div class = "intro-text">
+            
             <h1 class = "hide">
                 <span class = "text">
-                    Creating Innovation
+                    One Day,
                 </span>
             </h1>
             <h1 class = "hide">
                 <span class = "text">
-                    For Everyday
-                </span>
-            </h1>
-            <h1 class = "hide">
-                <span class = "text">
-                    People.
+                    One Commit.
                 </span>
             </h1>
         </div>
