--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <div id = "p" class = "projects">
         <h1 id = "hp" class = "header2"> PROJECTS </h1>
-        <h4 class = "sub"> ALL </h4>
+        <h4 class = "sub"> You can view all of my projects <a id = "phere" href ="assets/2022_Projects_Chan_Lee.pdf"> here </a> </h4>
         <div class = "p-gallery">
             <div class = "first-section">
                 <div class = "img-section">
