--- a/index.html
+++ b/index.html
@@ -149,6 +149,21 @@
 
     </div>
 
+    <!-- low section -->
+    <footer>
+        <h1 id = "hf" class = "header4"> Chan Lee </h1>
+        
+        <a href = "https://github.com/chanlee20" style="font-size:24px" class = "icons2"> <i class="fa fa-github"></i></a>
+        <a href = "https://www.linkedin.com/in/chan-lee-b38135a5/" style="font-size:24px" class = "icons2"> <i class="fa fa-linkedin"></i></a>
+        <a href = "https://www.facebook.com/chan.lee.1004837" style="font-size:24px" class = "icons2"> <i class="fa fa-facebook"></i></a>
+        <a href = "https://www.instagram.com/chan.lee20/" style="font-size:24px" class = "icons2"> <i class="fa fa-instagram"></i></a>
+
+        <div class = "cp">
+             <h4 class = "sf"> &#169; Chan Lee 2022 All Rights Reserved </h4>
+        </div>
+    </footer>
+
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js" integrity="sha512-VEBjfxWUOyzl0bAwh4gdLEaQyDYPvLrZql3pw1ifgb6fhEvZl9iDDehwHZ+dsMzA0Jfww8Xt7COSZuJ/slxc4Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src = "./app.js"></script>
 
