--- a/index.html
+++ b/index.html
@@ -146,10 +146,9 @@
     <div id = "r" class = "resume">
         <h1 id = "hr" class = "header3"> RESUME </h1>
         <h4 class = "instr"> My official resume can be seen <a id = "here" href = "assets/Chan Lee Official Resume Intern1.pdf"> here </a> </h4>
-
     </div>
 
-    <!-- low section -->
+    <!-- footer section -->
     <footer>
         <h1 id = "hf" class = "header4"> Chan Lee </h1>
         
