--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
             
             <h1 class = "hide">
                 <span class = "text">
-                    One Day,
+                    “Code is like humor. When you have to explain it, it’s bad.” 
+
                 </span>
             </h1>
             <h1 class = "hide">
                 <span class = "text">
-                    One Commit.
+                    – Cory House
                 </span>
             </h1>
         </div>
