--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     <!-- Resume -->
     <div id = "r" class = "resume">
         <h1 id = "hr" class = "header3"> RESUME </h1>
-        <h4 class = "instr"> My official resume can be seen <a id = "here" href = "assets/Chan Lee Official Resume Intern1.pdf"> here </a> </h4>
+        <h4 class = "instr"> My official resume can be seen <a id = "here" href = "assets/Chan Lee Official Resume Intern w_ Yonsei.pdf"> here </a> </h4>
     </div>
 
     <!-- footer section -->
