--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </h1>
             <h1 class = "hide">
                 <span class = "text">
-                            – Cory House
+                           $nbsp – Cory House
                 </span>
             </h1>
         </div>
