--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 
                 </span>
             </h1>
-            <h1 class = "hide">
+<!--             <h1 class = "hide">
                 <span class = "text">
                            $nbsp – Cory House
                 </span>
-            </h1>
+            </h1> -->
         </div>
     </div>
     <div class = "slider"></div>
