updated Jan 14th

--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
    <!-- first page section  -->
     <div id = "fp" class = "first-page">
         <div class="name">
-            <h1> Chan Lee </h1>
-            <h3> I Shape My World Through Computer Science. </h3>
+            <h1 class="name_text"> Chan Lee </h1>
+            <h3 class="catch_phrase"> I Shape My World Through Computer Science. </h3>
             <div class="icons_container">
-                <a href = "https://github.com/chanlee20" style="font-size:24px" id="github_icon" class = "icons"> <i class="fa fa-github"></i></a>
-                <a href = "https://www.linkedin.com/in/chan-lee-b38135a5/" id="linkedin_icon" style="font-size:24px" class = "icons"> <i class="fa fa-linkedin"></i></a>
-                <a href = "https://www.facebook.com/chan.lee.1004837" id="facebook_icon" style="font-size:24px" class = "icons"> <i class="fa fa-facebook"></i></a>
-                <a href = "https://www.instagram.com/chan.lee20/" id="instagram_icon" style="font-size:24px" class = "icons"> <i class="fa fa-instagram"></i></a>
+                <a href = "https://github.com/chanlee20" style="font-size:2.2vw" id="github_icon" class = "icons"> <i class="fa fa-github"></i></a>
+                <a href = "https://www.linkedin.com/in/chan-lee-b38135a5/" id="linkedin_icon" style="font-size:2.2vw" class = "icons"> <i class="fa fa-linkedin"></i></a>
+                <a href = "https://www.facebook.com/chan.lee.1004837" id="facebook_icon" style="font-size:2.2vw" class = "icons"> <i class="fa fa-facebook"></i></a>
+                <a href = "https://www.instagram.com/chan.lee20/" id="instagram_icon" style="font-size:2.2vw" class = "icons"> <i class="fa fa-instagram"></i></a>
             </div>
         </div>
         <img class = "pp" src = "assets/profile.png">
@@ -79,7 +79,7 @@
     <!-- skills -->
 
     <div id = "s" class ="skills">
-        <h1 id = "hs" class = "header3"> SKILLS </h1>
+        <h1 id = "hs" class = "header"> SKILLS </h1>
         <div class="skills_container">
             <div class="first_row">
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original-wordmark.svg" class = "skill_icons"/>
@@ -102,7 +102,7 @@
     <!-- Projects -->
 
     <div id = "p" class = "projects">
-        <h1 id = "hp" class = "header2"> PROJECTS </h1>
+        <h1 id = "hp" class = "header"> PROJECTS </h1>
         <div class = "project_container">
             <div class= "pj_first_row">
                 <a href="https://github.com/chanlee20/AI-FlappyBird" style="text-decoration: none;">
@@ -177,8 +177,8 @@
 
     <!-- Resume -->
     <div id = "r" class = "resume">
-        <h1 id = "hr" class = "header3"> Work Experience </h1>
-        <h4 class = "instr"> My official resume can be seen <a id = "here" href = "assets/Chan Lee Official Resume Intern w_ GPA (4).pdf"> here </a> </h4>
+        <h1 id = "hr" class = "header"> Education / Work Experience </h1>
+        <h4 class = "instr"> My official resume can be seen <a id = "here" href = "assets/Chan Lee Official Resume Intern w_ GPA (11).pdf"> here </a> </h4>
         <div class="timeline_container">
             <div class="timeline">
                 <ul>
@@ -205,6 +205,15 @@
                             <p>  <em> <a href="http://dogugonggan.com/" style="text-decoration: none; color: white;"> Dogugonggan Robotics </a> </em> </p>
                             <p> Employed the functionalities of ReSpeaker & ODAS microphones to calculate Direction of Angle and Voice Activity Detection; created these functions for AM27P Audinst microphones and created a software that can visually display the data. </p>
                             <p> Implemented <a href="https://doc-kurento.readthedocs.io/en/latest/" style="text-decoration: none; color: white;"> Kurento and WebRTC APIs </a>  to create a software that can connect N to N P2P communication using videos and display them at one screen. Created functionalities such as users joining different rooms, recording videos and automatically saving them, and blocking unidentified connections </p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="timeline-content">
+                            <h1> Yonsei International Summer School </h1> 
+                            <h4> Summer 2022 </h4>   
+                            <p>  <em> Yonsei University </em> </p>
+                            <p> Took Introduction to Machine Learning </p>
+                            <p> GPA: 4.0 </p>
                         </div>
                     </li>
                     <li>
@@ -236,10 +245,10 @@
     <footer>
         <h1 id = "hf" class = "header4"> Chan Lee </h1>
         
-        <a href = "https://github.com/chanlee20" style="font-size:24px" class = "icons2"> <i class="fa fa-github"></i></a>
-        <a href = "https://www.linkedin.com/in/chan-lee-b38135a5/" style="font-size:24px" class = "icons2"> <i class="fa fa-linkedin"></i></a>
-        <a href = "https://www.facebook.com/chan.lee.1004837" style="font-size:24px" class = "icons2"> <i class="fa fa-facebook"></i></a>
-        <a href = "https://www.instagram.com/chan.lee20/" style="font-size:24px" class = "icons2"> <i class="fa fa-instagram"></i></a>
+        <a href = "https://github.com/chanlee20" style="font-size:2.2vw" id="github_icon_footer"> <i class="fa fa-github"></i></a>
+        <a href = "https://www.linkedin.com/in/chan-lee-b38135a5/" style="font-size:2.2vw" id="linkedin_icon_footer" class = "icons2"> <i class="fa fa-linkedin"></i></a>
+        <a href = "https://www.facebook.com/chan.lee.1004837" style="font-size:2.2vw" id="facebook_icon_footer" class = "icons2"> <i class="fa fa-facebook"></i></a>
+        <a href = "https://www.instagram.com/chan.lee20/" style="font-size:2.2vw" id="instagram_icon_footer" class = "icons2"> <i class="fa fa-instagram"></i></a>
 
         <div class = "cp">
              <h4 class = "sf"> &#169; Chan Lee 2022 All Rights Reserved </h4>
