updated Jan 29th

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="icon" href="assets/personal_website/favicon-16x16.png">
     <link href="https://fonts.googleapis.com/css2?family=Anek+Tamil:wght@100&family=Grape+Nuts&family=Lato&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -52,7 +53,7 @@
         <h1 class = "header"> ABOUT </h1>
         <h3 class = "intro"> Hi! I am a Junior at Washington University in St. Louis studying computer science. </h3>
         <div class = "am-container">
-            <img class = "pp2" src = "assets/fkimg.jpeg"> 
+            <img class = "pp2" src = "assets/personal_website/fk.jpeg"> 
             <div class="personal_info">
                 <h1 class = "job"> Software Developer </h1>
                 <h3 class = "desc"> I am currently working in Sobriety Hub, a startup ran by WashU students, as an intern focusing on full stack development. </h3>
@@ -178,7 +179,7 @@
     <!-- Resume -->
     <div id = "r" class = "resume">
         <h1 id = "hr" class = "header"> Education / Work Experience </h1>
-        <h4 class = "instr"> My official resume can be seen <a id = "here" href = "assets/Chan Lee Official Resume Intern w_ GPA (11).pdf"> here </a> </h4>
+        <h4 class = "instr"> My official resume can be seen <a id = "here" href = "assets/Chan Lee Official Resume Intern w_ GPA (16).pdf"> here </a> </h4>
         <div class="timeline_container">
             <div class="timeline">
                 <ul>
