--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script>
         var typingEffect = new Typed(".multitext", {
-            strings: ["", "Software Engineer.", "Designer.", "Gamer."],
+            strings: ["", "Software Engineer.", "Designer.", "Problem Analyst."],
             loop: true,
             typeSpeed: 100,
             backSpeed: 80,
