--- a/home.html
+++ b/home.html
@@ -8,14 +8,14 @@
     <script src="https://kit.fontawesome.com/71ab33daee.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="style.css"/>  
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="icon" href="assets/personal_website/favicon-16x16.png">
     <link href="https://fonts.googleapis.com/css2?family=Anek+Tamil:wght@100&family=Grape+Nuts&family=Lato&display=swap" rel="stylesheet">
 </head>
 <body>
 
-    <!-- <div class = "beginning">
+    <div class = "beginning">
         <div class = "intro-text">
             <h1 class = "hide">
                 <span class = "quote">
@@ -23,7 +23,7 @@
                 </span>
             </h1>
         </div>
-    </div> -->
+    </div>
     <main>
         <section data-router-view="home">
             <div class="home-content">
