--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
             backDelay: 1500
         })
     </script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js" integrity="sha512-VEBjfxWUOyzl0bAwh4gdLEaQyDYPvLrZql3pw1ifgb6fhEvZl9iDDehwHZ+dsMzA0Jfww8Xt7COSZuJ/slxc4Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
-    <!-- <script type="module" src = "./app.js"></script> -->
-    <!-- <script type="module" src = "./index.js"></script> -->
-    <!-- <script type="module" src = "./transitions.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js" integrity="sha512-VEBjfxWUOyzl0bAwh4gdLEaQyDYPvLrZql3pw1ifgb6fhEvZl9iDDehwHZ+dsMzA0Jfww8Xt7COSZuJ/slxc4Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script type="module" src = "./app.js"></script>
+    <script type="module" src = "./index.js"></script>
+    <script type="module" src = "./transitions.js"></script>
 </body>
 </html>
