--- a/home.html
+++ b/home.html
@@ -30,8 +30,8 @@
                     <div id = "navbar" class = "navbar">
                         <a href = "#fp" style="font-size:24px" class = "nicon"> <i id = "house" class="fa-solid fa-house"></i></a>
                         <a href = "#am" style="font-size:24px" class = "nicon"> <i id = "user" class="fa-regular fa-user"></i></a>
-                        <a href = "#hp" style="font-size:24px" class = "nicon"> <i id = "list" class="fa-solid fa-list-check"></i></a>
-                        <a href = "#hs" style="font-size:24px" class = "nicon"> <i id = "progress" class="fa-solid fa-bars-progress"></i></a>
+                        <a href = "#hs" style="font-size:24px" class = "nicon"> <i id = "list" class="fa-solid fa-list-check"></i></a>
+                        <a href = "#hp" style="font-size:24px" class = "nicon"> <i id = "progress" class="fa-solid fa-bars-progress"></i></a>
                         <a href = "#hr" style="font-size:24px" class = "nicon"> <i id = "file" class="fa-regular fa-file"></i></i></a>
                     </div>
                 
@@ -47,7 +47,6 @@
                                 <a href = "https://www.instagram.com/chan.lee20/" id="instagram_icon"  class = "icons" target="_blank"> <i class="fa fa-instagram"></i></a>
                             </div>
                         </div>
-                        <!-- <img class = "pp" src = "assets/personal_website/astronaut.png"> -->
                     </div>
                 
                     <!-- about me  -->
